website/versioned_docs/version-0.9/api/orderedset.mdx
---
id: orderedset
title: Immutable Balanced OrderedSet in TypeScript
---

import Export from "@site/src/components/ApiExport";
import Summary from "@site/src/components/ApiSummary";
import Remarks from "@site/src/components/ApiRemarks";

# Immutable Balanced OrderedSet in TypeScript

```typescript
class OrderedSet<T extends OrderedMapKey>
```

<Summary>

Immutable Ordered Set

</Summary>

<Remarks>

The `OrderedSet<T>` class stores numbers, strings, booleans, dates, or custom objects which implement the
[ComparableObj](classes#ComparableObj) interface. OrderedSet implements the typescript-builtin `ReadonlySet`
interface (which consists of the read-only methods of
[the JS builtin Set](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set)).

The OrderedSet is immutable, which means that no changes or mutations are allowed directly to the OrderedSet.
Instead, modification operations such as [OrderedSet.add](#add) return a new OrderedSet which contains the
result of the modification.  The original OrderedSet is unchanged and can continue to be accessed and used.
The OrderedSet implements this efficiently using structural sharing and does not require a full copy; indeed,
the [delete](#delete) method will copy at most `O(log n)` entries.


</Remarks>

### Creating Ordered Sets

<Export anchor="empty" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L70">

```typescript
static empty<T extends OrderedMapKey>(): OrderedSet<T>
```

</Export>

<Summary>

Static method to create a new empty OrderedSet

</Summary>

<Remarks>

The key type must extend [OrderedMapKey](classes#OrderedMapKey), which consists of strings, numbers, dates, booleans, or a custom
user-defined object which implements the [ComparableObj](classes#ComparableObj) interface.

While you can start with an empty `OrderedSet` and then use [OrderedSet.add](#add) to add entries, it
is more efficient to create the OrderedSet in bulk using either the static [OrderedSet.from](#from) or [OrderedSet.build](#build)
or using various methods on [LazySeq](lazyseq#LazySeq) to convert a `LazySeq` to an `OrderedSet`.


</Remarks>

<Export anchor="ofKeys" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L82">

```typescript
static ofKeys<K extends OrderedMapKey, V>(map: OrderedMap<K, V>): OrderedSet<K>
```

</Export>

<Summary>

Static method to produce an OrderedSet of the keys in an OrderedMap

</Summary>

<Remarks>

Creates an OrderedSet consisting of all the keys in the given [OrderedMap](orderedmap#OrderedMap).
This function is O(1) and very fast because the backing data structure is reused.


</Remarks>

<Export anchor="from" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L98">

```typescript
static from<T extends OrderedMapKey>(items: Iterable<T>): OrderedSet<T>
```

</Export>

<Summary>

Efficiently create a new OrderedSet from a collection of items

</Summary>

<Remarks>

Runs in time O(n log n)


</Remarks>

<Export anchor="build" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L116">

```typescript
static build<T extends OrderedMapKey, R>(
    things: Iterable<R>,
    item: (v: R) => T
): OrderedSet<T>
```

</Export>

<Summary>

Efficiently create a new set from a collection of values and an item extraction function

</Summary>

<Remarks>

`build` efficiently creates a new HashSet by applying the given function to each thing in the
`things` collection.

Runs in time O(n log n)


</Remarks>

### IReadOnlySet interface

<Export anchor="size" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L128">

```typescript
𝑜𝑏𝑗.size(): number
```

</Export>

<Summary>

size is a readonly property containing the number of items in the set.

</Summary>


<Export anchor="has" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L139">

```typescript
𝑜𝑏𝑗.has(t: T): boolean
```

</Export>

<Summary>

Returns true if the item is in the set

</Summary>

<Remarks>

Runs in time O(log n)


</Remarks>

<Export anchor="Symbol_iterator" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L152">

```typescript
𝑜𝑏𝑗.[Symbol.iterator](): IterableIterator<T>
```

</Export>

<Summary>

Iterates the items in the set

</Summary>

<Remarks>

This is the default iteration when using `for .. of` directly on the `OrderedSet`.  It iterates
all the items in ascending order.


</Remarks>

<Export anchor="entries" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L165">

```typescript
𝑜𝑏𝑗.entries(): IterableIterator<[T, T]>
```

</Export>

<Summary>

Iterates the items in the OrderedSet

</Summary>

<Remarks>

This provides an iterator to iterate all the items in the OrderedSet.  Each item is iterated as a length-2 array with the item appearing
twice.  (This matches the builtin [Set.entries](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set/entries)
method.)  The items are iterated in ascending order.


</Remarks>

<Export anchor="keys" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L177">

```typescript
𝑜𝑏𝑗.keys(): IterableIterator<T>
```

</Export>

<Summary>

Iterates the items in the set

</Summary>

<Remarks>

This provides an iterator to iterate all the items in the OrderedSet. Items
are iterated in ascending order. Both `keys` and `values` are equivalent for an OrderedSet.


</Remarks>

<Export anchor="values" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L189">

```typescript
𝑜𝑏𝑗.values(): IterableIterator<T>
```

</Export>

<Summary>

Iterates the items in the set

</Summary>

<Remarks>

This provides an iterator to iterate all the items in the OrderedSet. Items
are iterated in ascending order. Both `keys` and `values` are equivalent for an OrderedSet.


</Remarks>

<Export anchor="forEach" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L202">

```typescript
𝑜𝑏𝑗.forEach(f: (val: T, val2: T, set: OrderedSet<T>) => void): void
```

</Export>

<Summary>

Applys a function to each item in the OrderedSet

</Summary>

<Remarks>

This applies the function `f` to each item in the set.  The item is provided twice (so as to match the builtin
[Set.forEach](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Set/forEach) method).
The items are iterated in ascending order.


</Remarks>

### Iteration

<Export anchor="foldl" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L222">

```typescript
𝑜𝑏𝑗.foldl<R>(f: (acc: R, t: T) => R, zero: R): R
```

</Export>

<Summary>

Reduce all the entries in the OrderedSet to a single value

</Summary>

<Remarks>

The letter-l in `foldl` stands for left.  Thinking of all the items as an ascending list, `foldl` starts
combining items from the left side.  Thus, the smallest item is combined with the zero value,
which is then combined with the next smallest item, and so on.


</Remarks>

<Export anchor="foldr" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L235">

```typescript
𝑜𝑏𝑗.foldr<R>(f: (t: T, acc: R) => R, zero: R): R
```

</Export>

<Summary>

Reduce all the entries in the OrderedSet to a single value

</Summary>

<Remarks>

The letter-r in `foldr` stands for right.  Thinking of all the items as an ascending list, `foldr` starts
combining items from the right side.  Thus, the largest item is combined with the zero value,
which is then combined with the second-to-largest item, and so on.


</Remarks>

<Export anchor="toAscLazySeq" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L243">

```typescript
𝑜𝑏𝑗.toAscLazySeq(): LazySeq<T>
```

</Export>

<Summary>

Creates a LazySeq which iterates all the items in the OrderedSet in ascending order

</Summary>


<Export anchor="toDescLazySeq" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L252">

```typescript
𝑜𝑏𝑗.toDescLazySeq(): LazySeq<T>
```

</Export>

<Summary>

Creates a LazySeq which iterates all the items in the OrderedSet in descending order

</Summary>


### Add and Delete

<Export anchor="add" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L265">

```typescript
𝑜𝑏𝑗.add(t: T): OrderedSet<T>
```

</Export>

<Summary>

Return a new OrderedSet with the given item added

</Summary>

<Remarks>

If the item already exists, then the OrderedSet object instance is returned unchanged.
Runs in time O(log n)


</Remarks>

<Export anchor="delete" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L282">

```typescript
𝑜𝑏𝑗.delete(t: T): OrderedSet<T>
```

</Export>

<Summary>

Return a new OrderedMap with the given item removed

</Summary>

<Remarks>

If the item does not exist, then the HashSet object instance is returned unchanged.
Runs in time O(log n)


</Remarks>

### Transformation

<Export anchor="partition" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L307">

```typescript
𝑜𝑏𝑗.partition(f: (t: T) => boolean): [OrderedSet<T>, OrderedSet<T>]
```

</Export>

<Summary>

Split an OrderedSet into two OrderedSets based on a function

</Summary>

<Remarks>

The function `f` is applied to each item.  The entries for which `f` returns `true`
are placed in one OrderedSet and entries for which `f` returns false are placed in the other.
The two sets are returned as a tuple, with the `true` set returned as the first
element of the tuple.

If the function `f` returns `true` for all entries, then the first OrderedSet object instance
is guaranteed to be === to the `this` object instance.  Similar for if `f` returns `false` for
all entries.

This runs in O(n) time.


</Remarks>

<Export anchor="filter" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L330">

```typescript
𝑜𝑏𝑗.filter(f: (t: T) => boolean): OrderedSet<T>
```

</Export>

<Summary>

Remove entries from the set that return false from a predicate

</Summary>

<Remarks>

`filter` applies the function `f` to each value and key in the OrderedSet.  If `f` returns false, the
key is removed.
`filter` guarantees that if no values are removed, then the OrderedSet object instance is returned
unchanged.

This runs in O(n) time.


</Remarks>

<Export anchor="split" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L351">

```typescript
𝑜𝑏𝑗.split(t: T): {
    readonly below: OrderedSet<T>;
    readonly present: boolean;
    readonly above: OrderedSet<T>;
  }
```

</Export>

<Summary>

Split an OrderedSet into the items below and above a given item

</Summary>

<Remarks>

`split` returns an object with three properties.  `below` is an OrderedSet with all the items
which are less than the provided item `t`.  `present` is a boolean which specifies if the item `t`
exists in the set or not.
Finally, the `above` property consists of all the items in the OrderedSet which are greater than `t`.

This runs in time O(log n)


</Remarks>

<Export anchor="transform" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L373">

```typescript
𝑜𝑏𝑗.transform<U>(f: (s: OrderedSet<T>) => U): U
```

</Export>

<Summary>

Apply a function to the OrderedSet

</Summary>

<Remarks>

Applies the provided function `f` to `this` and returns the result.  This is a convenience function
which allows you to continue to chain operations without having to create a new
temporary variable.


</Remarks>

### Min/Max Items

<Export anchor="lookupMin" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L384">

```typescript
𝑜𝑏𝑗.lookupMin(): T | undefined
```

</Export>

<Summary>

Find the minimum item in the set

</Summary>

<Remarks>

In O(log n) time, find the minimum item.  Returns undefined if the OrderedSet is empty.


</Remarks>

<Export anchor="lookupMax" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L396">

```typescript
𝑜𝑏𝑗.lookupMax(): T | undefined
```

</Export>

<Summary>

Find the maximum item in the set

</Summary>

<Remarks>

In O(log n) time, find the maximum item.  Returns undefined if the OrderedSet is empty.


</Remarks>

<Export anchor="deleteMin" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L408">

```typescript
𝑜𝑏𝑗.deleteMin(): OrderedSet<T>
```

</Export>

<Summary>

Removes the minimum item in the set

</Summary>

<Remarks>

In O(log n) time, return a new OrderedSet with the the minimum item removed.


</Remarks>

<Export anchor="deleteMax" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L421">

```typescript
𝑜𝑏𝑗.deleteMax(): OrderedSet<T>
```

</Export>

<Summary>

Removes the maximum item in the set

</Summary>

<Remarks>

In O(log n) time, return a new OrderedSet with the the maximum item removed.


</Remarks>

<Export anchor="minView" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L436">

```typescript
𝑜𝑏𝑗.minView(): { readonly min: T; readonly rest: OrderedSet<T> } | undefined
```

</Export>

<Summary>

Lookup and remove the minimum item

</Summary>

<Remarks>

In O(log n) time, find and remove the minimum item.  The minimum item
and the result of removing the minimum item are returned.  If the original OrderedSet is empty,
undefined is returned.


</Remarks>

<Export anchor="maxView" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L454">

```typescript
𝑜𝑏𝑗.maxView(): { readonly max: T; readonly rest: OrderedSet<T> } | undefined
```

</Export>

<Summary>

Lookup and remove the maximum item

</Summary>

<Remarks>

In O(log n) time, find and remove the maximum item.  The maximum item
and the result of removing the maximum item are returned.  If the original OrderedSet is empty,
undefined is returned.


</Remarks>

### Set Operations

<Export anchor="union" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L474">

```typescript
𝑜𝑏𝑗.union(other: OrderedSet<T>): OrderedSet<T>
```

</Export>

<Summary>

Returns a new set which combines all entries in two sets

</Summary>

<Remarks>

`union` produces a new OrderedSet which contains all the items in both OrderedSets.
`union` guarantees that if the resulting OrderedSet is equal to `this`, then the OrderedSet object
instance is returned unchanged.

Runs in time O(m log(n/m)) where m is the size of the smaller set and n is the size of the larger set.


</Remarks>

<Export anchor="union2" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L494">

```typescript
static union<T extends OrderedMapKey>(
    ...sets: readonly OrderedSet<T>[]
): OrderedSet<T>
```

</Export>

<Summary>

Create a new OrderedSet which combines all entries in a sequence of OrderedSets

</Summary>

<Remarks>

`OrderedSet.union` is the static version of [OrderedSet.union](#union) and allows unioning more than two sets
at once.  It produces a new OrderedSet which contains all the entries in all the OrderedSets.

`union` guarantees that if the resulting OrderedSet is equal to the first non-empty OrderedSet in the sequence,
then the OrderedSet object instance is returned unchanged.


</Remarks>

<Export anchor="intersection" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L525">

```typescript
𝑜𝑏𝑗.intersection(other: OrderedSet<T>): OrderedSet<T>
```

</Export>

<Summary>

Returns a new set which contains only items which appear in both sets

</Summary>

<Remarks>

`intersection` produces a new OrderedSet which contains all the items which appear in both OrderedSets.
`intersection` guarantees that if the resulting OrderedSet is equal to `this`, then the OrderedSet object
instance is returned unchanged.

Runs in time O(m log(n/m)) where m is the size of the smaller set and n is the size of the larger set.


</Remarks>

<Export anchor="intersection2" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L545">

```typescript
static intersection<T extends OrderedMapKey>(
    ...sets: readonly OrderedSet<T>[]
): OrderedSet<T>
```

</Export>

<Summary>

Returns a new set which contains only items who appear in all sets

</Summary>

<Remarks>

`OrderedSet.intersection` is a static version of [OrderedSet.intersection](#intersection), and produces a new OrderedSet
which contains the items which appear in all specified OrderedSet.

`intersection` guarantees that if the resulting OrderedSet is equal to the first OrderedSet, then the OrderedSet object
instance is returned unchanged.


</Remarks>

<Export anchor="difference" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L576">

```typescript
𝑜𝑏𝑗.difference(other: OrderedSet<T>): OrderedSet<T>
```

</Export>

<Summary>

Returns a new set which contains items which appear this but NOT in the provided set

</Summary>

<Remarks>

`difference` produces a new OrderedSet which contains all the items which appear in `this` OrderedSet,
except all the items from the `other` OrderedSet are removed.  `difference` can be thought of as subtracting: `this - other`.
`difference` guarantees that if the resulting OrderedSet is equal to `this`, then the HashSet object
instance is returned unchanged.

Runs in time O(m log(n/m)) where m is the size of the smaller set and n is the size of the larger set.


</Remarks>

<Export anchor="symmetricDifference" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L596">

```typescript
𝑜𝑏𝑗.symmetricDifference(other: OrderedSet<T>): OrderedSet<T>
```

</Export>

<Summary>

Returns an OrderedSet which contains only items which appear in exactly one of the two sets

</Summary>

<Remarks>

symmetricDifference produces a new set which contains all the items
appear in exactly one of this and other. If this or other are empty, the non-empty
set is returned unchanged.

Runs in time O(m log(n/m)) where m is the size of the smaller set and n is the size of the larger set.


</Remarks>

<Export anchor="isSubsetOf" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L614">

```typescript
𝑜𝑏𝑗.isSubsetOf(largerSet: OrderedSet<T>): boolean
```

</Export>

<Summary>

Returns true if each item of this exists in largerSet

</Summary>

<Remarks>

isSubsetOf checks if this is a subset of largerSet, that is, if every item in this is also in largerSet.

Runs in time O(m log(n/m)) where m is the size of this and n is the size of largerSet.


</Remarks>

<Export anchor="isSupersetOf" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L628">

```typescript
𝑜𝑏𝑗.isSupersetOf(smallerSet: OrderedSet<T>): boolean
```

</Export>

<Summary>

Returns true if each item of smallerSet exists in this

</Summary>

<Remarks>

isSupersetOf checks if this is a superset of smallerSet, that is, if every item in
smallerSet also exists in this.

Runs in time O(m log(n/m)) where m is the size of smallerSet and n is the size of this.


</Remarks>

<Export anchor="isDisjointFrom" src="https://github.com/SeedTactics/immutable-collections/blob/15ffb2bc13d6e22be8ea506bc66e8570984e6a09/src/api/orderedset.ts#L642">

```typescript
𝑜𝑏𝑗.isDisjointFrom(other: OrderedSet<T>): boolean
```

</Export>

<Summary>

Returns true if each item exists in exactly one of the two sets

</Summary>

<Remarks>

isDisjointFrom checks if this is disjoint from other, that is,
the intersection is empty.

Runs in time O(m log(n/m)) where m is the size of this and n is the size of other.


</Remarks>

